- Added sfdvLINESHAPE_DOCKPOINT_CENTER pre-defined value for wxSFLineShape::SetDockPoint() and  wxSFShapeBase::SetCustomDockPoint()
  function (for more details see the documentation).
- Shape canvas can process wxEVT_MOUSEWHEEL event if sfsPROCESS_MOUSEWHEEL style is in use. In this case a new virtual function
  wxSFShapeCanvas::OnMouseWheel() is called which adjusts the canvas scale.
- Fixed and unified wxSFLineShape::SetDockPoint() and wxSFShapeBase::SetCustomDockPoint() functionality.
- Fixed Horizontal/Vertical tree layout algorithm.
- Improved detection of ellipse shape vs. connection line intersection.
- Update wxSFDemo and wxSFSample3 project to reflect new features.

Changes in version 1.10.0 beta (2010-12-22):
--------------------------------------------
- Switched to use wxXmlSerializer 1.3.3:
  - SerializableList content can be directly serialized via XS_SERIALIZE macro.
  
- Added abbility to define fixed connection points for line connections. See wxSFShapeBase::AddConnectionPoint() functions
  and related.
- Implemented simple auto layout algorithms. For more details see wxSFAutoLayout class and wxSFDemo sample project.
  Currently supported layouting algorithms are "Circle", "Mesh", "Horizontal Tree" and "Vertical Tree".
- Added function wxSFDiagramManager::IsEmpty() which informs user whether the diagram manager contains any shapes.
- Added function wxSFShapeCanvas::CenterShapes() which centers whole diagram in accordance to the shape canvas extent.
- Update wxSFDemo project to reflect new features.

Changes in version 1.9.3 beta (2010-12-08):
--------------------------------------------
- Editation of wxSFEditTextShape can be disabled by putting editDISABLED value to wxSFEditTextShape::SetEditType(EDITTYPE type) function.
- Added functions void wxSFShapeCanvas::SetGridLineMult(int multiple) and int wxSFShapeCanvas::GetGridLineMult(). If used then grid lines